internal/render/testdata/bazarr/k8s/play/bazarr/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: bazarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - bazarr.k8s.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 6767
