internal/render/testdata/bazarr/k8s/play/bazarr/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: bazarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 6767
