internal/render/testdata/bazarr/k8s/play/bazarr/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: docker.io/linuxserver/bazarr:v1.5.2-ls307
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6767
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
